<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Encuesta">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text9" />

    <EditText
        android:id="@+id/etResp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text10" />

        <CheckBox
            android:id="@+id/cb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text11" />

        <CheckBox
            android:id="@+id/cb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text12" />

        <CheckBox
            android:id="@+id/cb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text13" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text14" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbn1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text15" />

                <RadioButton
                    android:id="@+id/rbn2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text16" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnEnviar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="Enviar"
                        android:text="@string/text17" />
                </LinearLayout>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>